Add similarity checks for word vectors

--- a/notebooks/visualize_embeddings.ipynb
+++ b/notebooks/visualize_embeddings.ipynb
@@ -95,6 +95,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyzing embeddings by similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('tighter', 0.3168957531452179),\n",
+       " ('eased', 0.30771005153656006),\n",
+       " ('tightening', 0.29848814010620117),\n",
+       " ('ease', 0.28025734424591064),\n",
+       " ('tightened', 0.27314120531082153),\n",
+       " ('alleviating', 0.2500372529029846),\n",
+       " ('accommodative', 0.24253059923648834),\n",
+       " ('qe', 0.23163431882858276),\n",
+       " ('frenkel', 0.22603756189346313),\n",
+       " ('generallythe', 0.22462420165538788)]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar(positive='easing')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
